codex-rs/tui/src/analytics/snapshots/codex_tui__analytics__tests__terminal_styles__analytics_light_business_1.snap
---
source: tui/src/analytics/styles_tests.rs
expression: snapshot
---
120x42
Text:
"  Analytics  ·  Live account                                                                                            "
"  [7d]  30d  ·  Aug 27–Sep 2, 2026                                                                                      "
"                                                                                                                        "
"  1 Credits usage history  [2 Token usage history]  3 Plugins called  4 Skills used  5 Top chats                        "
"                                                                                                                        "
"  ▎ Token usage history                                                                                  By token type  "
"  ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────  "
"  All models · m change model                                                                                           "
"  4,377,500 tokens                                                                                                      "
"                                                                                                                        "
"   1,000,000                                                                                                            "
"                                                                                                                        "
"                                                                                          ▂▂▂▂▂▂▂▂▂▂                    "
"                                                                                          ██████████       731,000      "
"                                                            ▇▇▇▇▇▇▇▇▇▇                    ██████████     ▁▁▁▁▁▁▁▁▁▁     "
"                                                            ██████████     ▃▃▃▃▃▃▃▃▃▃     ██████████     ██████████     "
"                              ▁▁▁▁▁▁▁▁▁▁                    ██████████     ██████████     ██████████     ██████████     "
"                              ██████████                    ██████████     ██████████     ██████████     ██████████     "
"                              ██████████     ▆▆▆▆▆▆▆▆▆▆     ██████████     ██████████     ██████████     ██████████     "
"     500,000                  ██████████     ██████████     ██████████     ██████████     ██████████     ██████████     "
"                              ██████████     ██████████     ██████████     ██████████     ██████████     ██████████     "
"                              ██████████     ██████████     ██████████     ██████████     ██████████     ██████████     "
"                              ██████████     ██████████     ██████████     ██████████     ██████████     ██████████     "
"                              ██████████     ██████████     ██████████     ██████████     ██████████     ██████████     "
"                              ██████████     ██████████     ██████████     ██████████     ██████████     ██████████     "
"               ██████████     ██████████     ██████████     ██████████     ██████████     ██████████     ██████████     "
"               ██████████     ██████████     ██████████     ██████████     ██████████     ██████████     ██████████     "
"               ██████████     ██████████     ██████████     ██████████     ██████████     ██████████     ██████████     "
"           0 ─────────────────────────────────────────────────────────────────────────────────────────────────────────  "
"                                                                                                              ▲         "
"                 Aug 27         Aug 28         Aug 29         Aug 30         Aug 31          Sep 1          Sep 2       "
"                                                                                                                        "
"  ────────────────────────────────────────────────────────                                                              "
"  Sep 2 · 731,000 tokens                                                                                                "
"  Token type                                        Tokens                                                              "
"  ● Cached input                                   602,000                                                              "
"  ● Uncached input                                  86,000                                                              "
"  ● Output                                          43,000                                                              "
"  Updated Sep 2 16:00 UTC                                                                                               "
"                                                                                                                        "
"  tab/1–5 section · z dashboard · ←/→ day · enter details                                                               "
"  r 7/30d · g group · R refresh · pgup/pgdn scroll · esc back · q close                                                 "
Palette (foreground|background|underline|modifiers):
0: Reset|Reset|Reset|NONE
1: Reset|Reset|Reset|BOLD
2: Rgb(76, 76, 76)|Reset|Reset|NONE
3: Rgb(0, 95, 135)|Reset|Reset|BOLD
4: Reset|Reset|Reset|DIM
5: Green|Reset|Reset|NONE
6: Magenta|Reset|Reset|NONE
7: Cyan|Reset|Reset|NONE
8: Rgb(0, 95, 135)|Reset|Reset|BOLD | UNDERLINED
9: White|Reset|Reset|BOLD
Rows (column:palette):
0: 0:0 2:1 11:2 28:0
1: 0:0 2:3 6:0 11:2 34:0
2: 0:0
3: 0:0 2:2 27:3 52:2 96:0
4: 0:0
5: 0:0 2:3 23:0 105:2 118:0
6: 0:0 2:4 118:0
7: 0:0 2:2 29:0
8: 0:0 2:3 18:0
9: 0:0
10: 0:0 3:2 12:0
11: 0:0
12: 0:0 90:5 100:0
13: 0:0 90:5 100:0 107:3 114:0
14: 0:0 60:5 70:0 90:6 100:0 105:5 115:0
15: 0:0 60:6 70:0 75:5 85:0 90:7 100:0 105:5 115:0
16: 0:0 30:5 40:0 60:6 70:0 75:6 85:0 90:7 100:0 105:6 115:0
17: 0:0 30:6 40:0 60:7 70:0 75:6 85:0 90:7 100:0 105:7 115:0
18: 0:0 30:6 40:0 45:5 55:0 60:7 70:0 75:7 85:0 90:7 100:0 105:7 115:0
19: 0:0 5:2 12:0 30:7 40:0 45:6 55:0 60:7 70:0 75:7 85:0 90:7 100:0 105:7 115:0
20: 0:0 30:7 40:0 45:7 55:0 60:7 70:0 75:7 85:0 90:7 100:0 105:7 115:0
21: 0:0 30:7 40:0 45:7 55:0 60:7 70:0 75:7 85:0 90:7 100:0 105:7 115:0
22: 0:0 30:7 40:0 45:7 55:0 60:7 70:0 75:7 85:0 90:7 100:0 105:7 115:0
23: 0:0 30:7 40:0 45:7 55:0 60:7 70:0 75:7 85:0 90:7 100:0 105:7 115:0
24: 0:0 30:7 40:0 45:7 55:0 60:7 70:0 75:7 85:0 90:7 100:0 105:7 115:0
25: 0:0 15:7 25:0 30:7 40:0 45:7 55:0 60:7 70:0 75:7 85:0 90:7 100:0 105:7 115:0
26: 0:0 15:7 25:0 30:7 40:0 45:7 55:0 60:7 70:0 75:7 85:0 90:7 100:0 105:7 115:0
27: 0:0 15:7 25:0 30:7 40:0 45:7 55:0 60:7 70:0 75:7 85:0 90:7 100:0 105:7 115:0
28: 0:0 11:2 12:0 13:4 118:0
29: 0:0 110:3 111:0
30: 0:0 17:2 23:0 32:2 38:0 47:2 53:0 62:2 68:0 77:2 83:0 93:2 98:0 108:8 113:0
31: 0:0
32: 0:0 2:4 58:0
33: 0:0 2:1 7:3 24:0
34: 0:0 2:1 12:0 52:1 58:0
35: 0:0 2:7 4:0
36: 0:0 2:6 4:0
37: 0:0 2:5 4:0
38: 0:0 2:2 25:0
39: 0:0
40: 0:0 2:9 9:2 20:9 21:2 34:9 37:2 44:9 49:2 118:0
41: 0:0 2:9 3:2 12:9 13:2 22:9 23:2 34:9 43:2 53:9 56:2 64:9 65:2 118:0
